# rubik

./: .gitignore  Cargo.toml  MISC.md  Makefile  README.md
move_macro/: Cargo.toml
move_macro/src/: lib.rs
src/: color.rs  cube.rs  filenames.rs  files.rs  generate_table.rs  karaoke.rs  lib.rs  main.rs  move.rs  puzzle.rs  pyraminx.rs  solver.rs  sticker.rs  trigger.rs  visualizer.rs
src/puzzles/: cube.rs  mod.rs  pyraminx.rs
src/puzzles/move/: cube_move.rs  mod.rs  pyra_move.rs
src/solvers/: bfs.rs  cfop.rs  iddfs.rs  kociemba.rs  last_layer.rs  mod.rs  zz.rs
src/tables/: file_operations.rs  generate_start_table.rs  generate_table.rs  mod.rs
src/visualizer/: karaoke.rs  mod.rs  visualizer.rs
