[package]
name = "rubik"
version = "0.1.0"
edition = "2024"
default-run = "rubik"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
kiss3d = "0.35.0"
move_macro = { path = "move_macro" }
rand = "0.8.5"
rusttype = "0.8.3"
serial_test = "3.1.1"

[lints.rust]
# TODO

[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# pedantic
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# I don't like allowing it but it's too useful for the Sticker enum
enum_glob_use = "allow"            
many_single_char_names = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

# restriction
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
mod_module_files = "allow"
pattern_type_mismatch = "allow"
print_stdout = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_test_prefix = "allow"
semicolon_outside_block = "allow"
shadow_reuse = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
unreachable = "allow"
unwrap_used = "allow"
wildcard_enum_match_arm = "allow"

# style
len_without_is_empty = "allow"

# suspicious
blanket_clippy_restriction_lints = "allow"
