[package]
name = "rubik"
version = "0.1.0"
edition = "2024"
default-run = "rubik"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"
kiss3d = "0.39"
move_macro = { path = "move_macro" }
rand = "0.9"
rusttype = "0.9"
serial_test = "3.3"

[lints.rust]
# TODO

[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# correctness
useless_attribute = "allow" # seems buggy for pub_use

# nursery
# Annoying, but required by kiss3d 0.39
future_not_send = "allow"
option_if_let_else = "allow"
suboptimal_flops = "allow"

# pedantic
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# I don't like allowing it but it's too useful for the Sticker enum
enum_glob_use = "allow"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

# restriction
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
modulo_arithmetic = "allow"
non_ascii_literal = "allow"
panic = "allow"
pattern_type_mismatch = "allow"
print_stdout = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_test_prefix = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
unreachable = "allow"
unwrap_used = "allow"
wildcard_enum_match_arm = "allow"

# style
len_without_is_empty = "allow"

# suspicious
blanket_clippy_restriction_lints = "allow"
